src/components/styles/_medios.scss
@use "./global" as *;

$mobileS: "320px";
$mobileM: "480px";
$mobileL: "600px";
$tablet: "768px";
$tabletL: "900px";
$laptop: "1024px";
$laptopL: "1440px";
$desktop: "2560px";

// laptop
@media (max-width: $laptop) {
  .hero {
    padding: 0;
  }
}
@media (max-width: $tabletL) {
  #pricipal-section {
    padding: 50px;
  }
}
// tablet
@media (max-width: $tablet) {
  header {
    padding: 0 30px;
  }
  #pricipal-section {
    padding: 50px;
  }
  .hero {
    justify-items: center;
    grid-template-columns: 1fr;
    margin-top: 20px;
  }
  .titles-hero {
    grid-row: 1;
    margin-bottom: 50px;
    width: 100%;
  }
  .title-hero {
    font-size: 3rem;
  }
  .secondary-title {
    font-size: 3rem;
  }
  #about-me {
    grid-template-columns: 1fr;
  }
  .container-paragraph {
    max-width: none;
  }
  .skills-list {
    grid-template-columns: 1fr 1fr 1fr;
    margin: 45px 0 0 0;
  }
  .container-img {
    width: 100%;
    display: flex;
    justify-content: center;
    margin: 50px 0;
    & img {
      margin-left: 0;
      width: 45%;
    }
  }
  .secondary-projects {
    width: 315px;
    padding: 15px;
    &:hover {
      -moz-transition: none;
      -webkit-transition: none;
      -o-transition: color 0 ease-in;
      transition: none;
      transform: none;
      background-color: none;
    }
  }
  .text-contact {
    margin-bottom: 50px;
    font-weight: 400;
    color: $text-color;
  }
  .card-contact {
    width: 100%;
  }

  //   project
  .project {
    border: 1px solid;
    border-style: dashed;
    grid-template-columns: repeat(1, 1fr);
    width: 100%;
    height: 100%;
    & br,
    hr {
      display: none;
    }
  }
  .content {
    position: relative;
    z-index: 1;
    background: #222222db;
    padding: 20px;
    justify-content: center;
    &__description {
      margin-top: 25px;
      display: grid;
      &__text {
        grid-row: 1;
        font-size: 1.6rem;
      }
      &__start-age {
        width: 36%;
        text-align: center;
        padding: 6px 0px;
      }
    }
  }
  .link {
    text-decoration: underline;
    -webkit-text-fill-color: $titles-color;
  }
  .image-tech--project {
    height: auto;
    position: absolute;
    &__list {
      display: none;
    }
    figcaption {
      display: none;
    }
  }
  .img-project {
    width: 99%;
    height: 99%;
  }
  .card-contact__social-networks-links a {
    font-size: 1.5rem;
  }
}
// mobile large

@media (max-width: $mobileL) {
  header {
    padding: 0 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 80px;
    position: initial;
  }
  .greeting {
    display: inline-block;
    font-size: 1.4rem;
    font-family: "Inter";
    font-weight: 700;
    color: #bbbbbb;
  }
  .logo {
    margin: 10px 0;
  }
  .header-btn {
    padding: 20px 10px;
  }
  .secondary-projects {
    width: 500px;
    &__main {
      text-align: left;
    }
  }
  .container-titles {
    font-size: 2.2rem;
  }
  .title-about {
    font-size: 2rem;
  }
  #contact {
    margin-bottom: 100px;
  }
  .footer {
    display: flex;
    &__principal-text {
      transform: none;
      text-align: center;
    }
  }
  .card-contact {
    height: 250px;
    margin: 30px 0;
    border-radius: 5px;
    border: 1px solid;
    background-color: #2c2c2c;
    color: #ffffff;
    &__message {
      height: 80%;
    }
    &__social-networks-links a {
      color: #ffffff;
    }
  }

  .titles {
    &__title {
      font-size: 2.5rem;
    }
  }
}
@media (max-width: $mobileM) {
  #pricipal-section {
    padding: 25px;
  }
  .project {
    align-items: start;
  }
  .image-tech--project {
    height: 20%;
  }
}

